add the patch method
